
5.4.32 -
  Matt Brookings
  - Updated maildirsize creation to set uid/gid on target
  - Updated maildirsize_read to enforce Maildir++ specifications related
    to maildirsize filesize and maildirsize modification time.
  - Fixed returning of 0 rather than NULL in client_connect
  - Updated vusage client API not to try to connect to the daemon if
    vusagec.conf does not exist

  aledr <matrixworkstation@gmail.com>
  - Patch to secure against possible overflows when reading ezmlm configurations

5.4.31 - Released 12-10-2009
   Matt Brookings
   - Released to fix leftover issue that should have been addressed in 5.4.30

5.4.30 - Released 12-10-2009
   Matt Brookings
   - Fixed problem where variable was declared in-function
   - Duplicated a few fixes from 5.5 branch in vusaged

5.4.29 - Released 12-03-2009
   Matt Brookings
   - Numerous fixes to compile on Solaris
   - Fixed some format string issues
   - Fixed strstr being used with NULL value in vchkpw
   - Numerous fixes to compile on FreeBSD
   - Released to address some segfault issues in 5.4.28
   - Fixed bug in config API that assumes config pointer is not NULL
   - Updated client API to check Server::Disable
   - Updated client API to properly release configuration-related memory

5.4.28 - Released 08-24-2009
   Matt Brookings
   - Updated vlimits_read_vlimits_file to be much more efficient
   - Added vusage client API to libvpopmail
   - Added vusage daemon
   - Updated quota code to talk to vusage daemon if available
   - Fixed some backfill patch compilation issues
   - Updated maildir_to_email to support paths that end in /Maildir as well as /Maildir/
   - Added LDAP valias support
   - Updated vusage API to return counts for both users and domains
   - Updated domain quota enforcement to work when using vusage
   - Re-enabled --enable-domainquotas (with warnings)
   - Fixed percentage calculation bug in vmaildir_readquota
   - Updated lastauth/vlog queries not to trigger failure condition on domain